--- a/index.css
+++ b/index.css
@@ -91,13 +91,12 @@ main {
 .language-selection {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
   justify-content: center;
 }
 
 .radio-group {
   display: flex;
-  align-self: flex-start;
   margin-left: 50px;
   gap: 17px;
   font-size: 20px;
